# miniAgent

./: .gitignore  LICENSE  README.md  agent.py  audit.py  config.py  context.py  local_config.example.py  main.py  memory.py  mini.bat  mini.ps1  models.py  pyproject.toml  requirements.txt  session.py  tools.py  workspace.py
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: __init__.py
demos/real_project_demo/: README.md
docs/: architecture.md  configuration_spec.md  eval_methodology.md  final_status.md  release_checklist.md  release_notes.md  resume_story.md
evals/: README.md  __init__.py  metrics.py  runner.py
miniagent/: __init__.py  __main__.py  app.py  audit.py  audit_report.py  benchmarks.py  bootstrap.py  changes.py  cli.py  code_index.py  config.py  context.py  context_budget.py  engine.py  event_log.py  mcp_client.py  memory.py  messages.py  model.py  model_adapters.py  model_base.py  model_router.py  models.py  permissions.py  plugin_loader.py  prompts.py  repl.py  run_store.py  runtime.py  security.py  session.py  storage.py  tool_base.py  tool_registry.py  tool_runner.py  tools.py  workspace.py
pycode_agent/: __init__.py  __main__.py  audit.py  cli.py  config.py  context.py  engine.py  events.py  memory.py  messages.py  model.py  permissions.py  prompts.py  repl.py  storage.py  tool_base.py  tool_runner.py
scripts/: make_demo.ps1  make_demo.py  run_benchmarks.py  smoke.ps1
tests/: conftest.py  fakes.py  test_app.py  test_audit.py  test_benchmarks.py  test_cli.py  test_config.py  test_context.py  test_delegate.py  test_engine.py  test_evals.py  test_glob_grep.py  test_memory.py  test_messages.py  test_model_fake.py  test_model_router.py  test_permissions.py  test_quality_foundations.py  test_read_file.py  test_runtime.py  test_security.py  test_shell.py  test_storage.py  test_tool_registry.py  test_tool_runner.py  test_tools.py  test_write_edit_file.py
(+85 files in other folders)
