[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniagent"
version = "0.1.0"
description = "轻量本地 CLI 代码助手"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "xinjia-ctrl" },
]
dependencies = [
    "openai",
    "anthropic",
    "prompt_toolkit",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
mini = "miniagent.cli:main"

[project.urls]
Homepage = "https://github.com/xinjia-ctrl/miniAgent"

[tool.setuptools]
packages = ["miniagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
